# power-curve-schema

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OVERVIEW.md  README.md  pyproject.toml
.github/workflows/: lint.yml  refresh-pr-notes-on-main-push.yml  update-pull-request.yml
docs/: generate_terms.py  terms.rst
docs/summariser/: make_summary.py  pyproject.toml
docs/summariser/summariser/: __init__.py  summarise.py
docs/summary/: summary.rst
lenses/: lenses.py
power-curve-schema/: schema.json
power-curve-schema/examples/: generic-117-3-with-extra-parameters.json  generic-117-3.json  generic-120-3-with-extra-parameters.json  generic-120-3.json  generic-274-20.json
test/: conftest.py  helpers.py  test_design_basis.py  test_document_metadata.py  test_examples.py  test_generate_terms.py  test_lenses.py  test_modes.py  test_power_curves.py  test_turbine.py  test_turbine_metadata.py
test/fixtures/: generic-120-3-alpha-3.json  generic-274-20-alpha-3.json
