[tool.poetry]
name = "power-curve-schema"
version = "0.1.0"
description = "A schema for describing power curves, and associated tests."
authors = ["Tom Clark <tom@octue.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pytest = "^7.4.0"
jsonschema = "^4.19.0"
jsonpath-ng = "^1.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
rstcloth = "^0.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
