[tool.poetry]
name = "summariser"
version = "0.1.0"
description = "Generates summary in restructuredText and outputs as HTML or PDF"
authors = ["Tom Clark <tom@octue.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
rstcloth = "^0.5.4"

[tool.poetry.dev-dependencies]
icecream = "^2.1.3"
Sphinx = ">=2,<6" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
